--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,25 @@
+<!DOCTYPE html>
 <html>
-
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="css/style_login.css">
 </head>
-
 <body>
-
-    
-
+    <div class="login-bg"></div>
+    <div class="login-box">
+        <h1>Login</h1>
+        <form>
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" placeholder="Enter your username">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Enter your password">
+            <input type="submit" value="Login">
+        </form>
+        <p>Don't have an account? <a href="signup.html">Sign up</a></p>
+    </div>
     <script type="text/javascript" src="libs/vue.js"></script>
     <script type="text/javascript" src="libs/axios.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
 </body>
-
 </html>
