--- a/client/index.html
+++ b/client/index.html
@@ -7,19 +7,20 @@
 </head>
 <body>
     <div class="login-bg"></div>
-    <div class="login-box">
+    <div class="login-box" id="app">
         <h1>Login</h1>
-        <form>
+        <form @submit.prevent="login">
             <label for="username">Username</label>
-            <input type="text" id="username" name="username" placeholder="Enter your username">
+            <input type="text" id="username" v-model="username" placeholder="Enter your username">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password">
+            <input type="password" id="password" v-model="password" placeholder="Enter your password">
             <input type="submit" value="Login">
         </form>
         <p>Don't have an account? <a href="signup.html">Sign up</a></p>
     </div>
     <script type="text/javascript" src="libs/vue.js"></script>
     <script type="text/javascript" src="libs/axios.js"></script>
-    <script type="text/javascript" src="js/login.js"></script>
+    <script type="module" src="js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-sweetalert2"></script>
 </body>
 </html>
