--- a/client/signup.html
+++ b/client/signup.html
@@ -14,7 +14,7 @@
         <div id="errorMessage"></div>
         <form @submit.prevent="submitForm">
             <label for="profilePic">Profile Picture</label>
-            <input type="file" v-model="profilePic" id="profilePic" name="profilePic" accept=".jpg, .jpeg, .png">
+            <input type="file" id="profilePic" name="profilePic" accept=".jpg, .jpeg, .png" @change="onFileChange">
             <label for="firstName">First Name</label>
             <input type="text" v-model="firstName" id="firstName" name="firstName" :class="{'error': errors.firstName}" required>
             <label for="lastName">Last Name</label>
