--- a/client/profile.html
+++ b/client/profile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="title-section">
-        <a :href=`home.html?userId=${userId}`>
+        <a :href=`home.html?userId=${owner}`>
             <img src="resources/logo.png" alt="SocialWave Logo" class="logo-image">
         </a>
         <a href="index.html" class="logout-btn">Log Out</a>
